--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,6 @@
-MONGO_USERNAME=""
-MONGO_PASSWORD=""
+MONGO_USERNAME="bigsmoke"
+MONGO_PASSWORD="123qwe"
 
 SERVER_PORT="3000"
+
+JWT_SECRET="secret"
