--- a/backend/package.json
+++ b/backend/package.json
@@ -16,13 +16,15 @@
     "jsonwebtoken": "^9.0.0",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
-    "mongoose": "^7.1.0"
+    "mongoose": "^7.1.0",
+    "sha1": "^1.1.1"
   },
   "devDependencies": {
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/lodash": "^4.14.195",
+    "@types/sha1": "^1.1.3",
     "typescript": "^5.0.4"
   }
 }
